docs: Document dd-trace-java's useful extensions